Added a slider to control the field intensity & added field worker
Added a slider to the space view to allow the user to control the field
intensity.  Also added a field worker to accompany the force worker.

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -19,9 +19,10 @@
       <script type="text/javascript" src="js/gravity/three.js"></script>
       <script type="text/javascript" src="js/gravity/OrbitControls.js"></script>
       <script type="text/javascript" src="js/gravity/d3-3d.js"></script>
+      <script type="text/javascript" src="js/gravity/svm.js"></script>
       <script type="text/javascript" src="js/gravity/stats.min.js"></script>
       <script type="text/javascript" src="js/gravity/gravity-mod.js"></script>
-      <script type="text/javascript" src="js/svm.js"></script>
+      <script type="text/javascript" src="js/gravity/svm.js"></script>
       
       <script type="text/javascript" src="js/app.js"></script>
     </body>
